# extera

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.md  README.qmd  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  extera-package.R  r6.R  render-template.R  utils.R
articles/: extera.html  extera.md  index.html  index.md
man/: ExTera.Rd  add-file-templates.Rd  add-string-templates.Rd  add_file_templates.Rd  add_string_templates.Rd  autoescape.Rd  autoescape_off.Rd  autoescape_on.Rd  extera-package.Rd  list-templates.Rd  list_templates.Rd  new.Rd  new_engine.Rd  print.Rd  render-to-string.Rd  render.Rd  render_template.Rd  render_template_file.Rd  render_to_string.Rd
reference/: ExTera.html  ExTera.md  add-file-templates.html  add-file-templates.md  add-string-templates.html  add-string-templates.md  add_file_templates.html  add_file_templates.md  add_string_templates.html  add_string_templates.md  autoescape-off.html  autoescape.html  autoescape.md  autoescape_off.html  autoescape_off.md  autoescape_on.html  autoescape_on.md  extera-package.html  extera-package.md  extera.html  index.html  index.md  list-templates.html  list-templates.md  list_templates.html  list_templates.md  new.html  new.md  new_engine.html  new_engine.md  print.html  print.md  render-to-string.html  render-to-string.md  render.html  render.md  render_template.html  (+4 more)
src/rust/: Cargo.toml
src/rust/src/: lib.rs
(+6 files in other folders)
