[package]
name = "extera"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false

[lib]
crate-type = ["staticlib"]
name = "extera"

[dependencies]
extendr-api = { version = "0.8.1", features = ["serde"] }
serde_json = "1.0.143"
tera = { version = "1.20", default-features = false }

[profile.release]
lto = true
